--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --exit"
+    "lint": "eslint --ignore-path .gitignore .",
+    "test": "mocha --exit",
+    "start": "node server/index.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
+    "eslint": "^4.19.1",
+    "eslint-config-google": "^0.9.1",
+    "eslint-config-strongloop": "^2.1.0",
     "mocha": "^5.1.1",
     "sqlite3": "^4.0.0"
   },
